force-app/main/default/objects/PBIS_Policy__c/PBIS_Policy__c.object-meta.xml
<CustomObject>
    <description>Primary PBIS Policy (Task 2). Channel-wise master that holds, per Profile, the incentive slabs and their monthly/quarterly percentage of gross.</description>
    <label>Primary PBIS Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Primary PBIS Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>