force-app/main/default/objects/PBIS_Policy__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <inlineHelpText>Whether this policy is measured on value or volume (BR-08).</inlineHelpText>
    <label>Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
                <default>true</default>
                <label>Value</label>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>