force-app/main/default/objects/PBIS_Policy__c/fields/Sales_Channels__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channels__c</fullName>
    <inlineHelpText>The sales channels this policy applies to (multi-select).</inlineHelpText>
    <label>Sales Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chanel</valueSetName>
    </valueSet>
</CustomField>